[package]
name = "ivolgaql"
version = "0.0.2"
edition = "2021"
description = "Мини MVP: русскоязычный синтаксис запросов и TCP-сервер (ИволгаQL)"
readme = "README.md"
license = "MIT"
authors = ["Ivan Karlo <i.karlo@outlook.com>"]
repository = "https://github.com/yellow-hammer/ivolgaql"
publish = false

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["io-std", "io-util", "macros", "net", "rt-multi-thread", "signal", "sync"] }
